Implemented feedback: Improved test